# neptu.ai

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  tsconfig.json  turbo.json
.blueprint/: HACKATHON-INFO.md  README.md  TRENDS-ANALYSIS.md
.blueprint/ar/: AR-FEATURES.md  AURA-SCANNER-PLAN.md
.blueprint/neptu/: NEPTU-SPEC.md  PITCHDECK.md  PLAN.md  SANDANG-PANGAN-WATAK.md  WORLD-ECONOMIC.md  index.md
.blueprint/nl-fi/: NL-FI-SPEC.md
.github/: copilot-instructions.md
.github/workflows/: deploy-azure.yml  deploy-web.yml  pr-check.yml
.husky/: pre-commit
apps/api/: Dockerfile  package.json  rolldown.config.ts  tsconfig.json  wrangler.toml
apps/cli/: package.json
apps/mobile/: App.tsx  app.config.ts  app.json  metro.config.js  package.json  styles.ts  tsconfig.json  types.ts  utils.ts
apps/web/: eslint.config.js  index.html  package.json  vite.config.ts
apps/worker/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json  wrangler.toml
blockchain/solana/neptu/programs/neptu-economy/: Cargo.toml
blockchain/solana/neptu/programs/neptu-economy/src/: lib.rs
blockchain/solana/neptu/programs/neptu-token/: Cargo.toml
blockchain/solana/neptu/programs/neptu-token/src/: lib.rs
brainstorming/: PROJECT-IDEAS.md  SELECTED-PROJECT.md
brainstorming/neptu/: NEPTU-SPEC.md  PLAN.md  README.md  SOLANA-MOBILE-HACKATHON.md  TOKENOMICS.md  VOICE-GUIDE.md  index.md
brainstorming/nl-fi/: NL-FI-SPEC.md
docs/: .gitignore  index.md  package.json  tokenomics.md  tsconfig.json
docs/.vitepress/: config.ts
(+500 files in other folders)
